--- a/README.Rmd
+++ b/README.Rmd
@@ -45,20 +45,18 @@ data(fihs, package = "hydricsoils")
 subset(fihs, fihs$indicator == "A9", select = c("usage", "usage_symbols", "except_mlra"))
 ```
 
-If we load the MLRA v5.2 database, for instance using {terra}, we can visualize the extent of where the "A9" indicator is used (in blue), and then show the MLRA it is excluded from (a portion of LRR "P", also known as the "South Atlantic and Gulf Slope Cash Crops, Forest, and Livestock Region", in red):
+If we load the MLRA v5.2 database using `lrrmlra_geometry()` (requires [{terra}](https://github.com/rspatial/terra/)) we can visualize the extent of where the "A9" indicator is used (in blue), and then show the MLRA it is excluded from (a portion of LRR "P", also known as the "South Atlantic and Gulf Slope Cash Crops, Forest, and Livestock Region", in red):
 
 ```{r example1-spatial}
-library(terra)
-
-x <- vect("/vsizip//vsicurl/https://www.nrcs.usda.gov/sites/default/files/2022-10/MLRA_52_2022.zip/MLRA_52_2022")
+x <- lrrmlra_geometry()
 
 ind <- subset(fihs, fihs$indicator == "A9")
-xsub <- subset(x, x$LRRSYM %in% unlist(ind$usage_symbols))
-xexc <- subset(xsub, xsub$MLRARSYM %in% unlist(ind$except_mlra))
+xsub <- terra::subset(x, x$LRRSYM %in% unlist(ind$usage_symbols))
+xexc <- terra::subset(xsub, xsub$MLRARSYM %in% unlist(ind$except_mlra))
 
-plot(x, ext = xsub)
-plot(xsub, add = TRUE, col = "BLUE")
-plot(xexc, add = TRUE, col = "RED")
+terra::plot(x, ext = xsub)
+terra::plot(xsub, add = TRUE, col = "BLUE")
+terra::plot(xexc, add = TRUE, col = "RED")
 ```
 
 ### Example 2
@@ -93,8 +91,6 @@ In future updates I hope to include:
  - _ A glossary with definitions of key criteria and terms
  
  - _ An index to figures and pictures from the guide, and mapping of figures to specific indicators
- 
- - _ Parsing of LRRs and MLRAs where established indicators are being tested (new columns in existing dataset, or new dataset)
  
  - _ Parsing of LRRs and MLRAs where provisional indicators are being tested (new dataset)
 
