--- a/README.Rmd
+++ b/README.Rmd
@@ -45,18 +45,12 @@ data(fihs, package = "hydricsoils")
 subset(fihs, fihs$indicator == "A9", select = c("usage", "usage_symbols", "except_mlra"))
 ```
 
-If we load the MLRA v5.2 database using `lrrmlra_geometry()` (requires [{terra}](https://github.com/rspatial/terra/)) we can visualize the extent of where the "A9" indicator is used (in blue), and then show the MLRA it is excluded from (a portion of LRR "P", also known as the "South Atlantic and Gulf Slope Cash Crops, Forest, and Livestock Region", in red):
+If we load the MLRA v5.2 database using `lrrmlra_geometry()` (requires [{terra}](https://github.com/rspatial/terra/)) we can visualize the extent of where the "A9" indicator is used.
+
+There is a function in the package called `plot_indicator_usage()` which simplifies the process of loading and subsetting the geometry. It provides some simple defaults for visualizing areas where usage is "Approved", "Excluded" or in "Testing".
 
 ```{r example1-spatial}
-x <- lrrmlra_geometry()
-
-ind <- subset(fihs, fihs$indicator == "A9")
-xsub <- terra::subset(x, x$LRRSYM %in% unlist(ind$usage_symbols))
-xexc <- terra::subset(xsub, xsub$MLRARSYM %in% unlist(ind$except_mlra))
-
-terra::plot(x, ext = xsub)
-terra::plot(xsub, add = TRUE, col = "BLUE")
-terra::plot(xexc, add = TRUE, col = "RED")
+plot_indicator_usage("A9", test_areas = TRUE, ext = c("Approved", "Excluded"), plg = list(x = "bottomleft"))
 ```
 
 ### Example 2
@@ -80,11 +74,22 @@ It is important to remember that the area of applicability across Land Resource 
 
 The main difference between LRRs "C" and "D" is that indicator "A5" is approved for use in LRR "C" whereas "A9" is approved for use in LRR "D". Note that while "A9" is available for testing in "C", "A5" is not being considered for use in LRR "D". 
 
+We can visualize this by expanding the first example to include "A5" in a separate pane. We limit the extent to just LRRs "C" and "D".
+
+```{r example2-spatial}
+x <- lrrmlra_geometry()
+xext <- subset(x, x$LRRSYM %in% c("C", "D"))
+
+par(mfrow = c(2, 1))
+plot_indicator_usage("A5", test_areas = TRUE, ext = xext)
+plot_indicator_usage("A9", test_areas = TRUE, ext = xext)
+```
+
 ## Future work
 
 In future updates I hope to include:
 
-<!-- use &check; and reference issue/PRs as these are completed -->
+<!-- use :heavy_check_mark: and reference issue/PRs as these are completed -->
 
  - _ A defined _data.frame_ format with standard column names, data types, and relationships that are needed to evaluate criteria for all established and provisional indicators
  
@@ -92,11 +97,13 @@ In future updates I hope to include:
  
  - _ An index to figures and pictures from the guide, and mapping of figures to specific indicators
  
- - _ Parsing of LRRs and MLRAs where provisional indicators are being tested (new dataset)
+ - _ Parsing of LRRs and MLRAs where provisional indicators are being tested
 
  - _ Routines for automatic evaluation of input data to determine which indicators may be met
  
- - _ Spatial methods and helpers for creating graphics depicting where indicators are used or not
+ - _ Spatial methods for determining appropriate indicators to consider
+ 
+ - :heavy_check_mark: Helpers for creating graphics depicting where indicators are used or not (DONE: see `plot_indicator_usage()`)
  
 ## Disclaimer
 
