--- a/README.Rmd
+++ b/README.Rmd
@@ -64,7 +64,8 @@ plot_indicator_usage(
 Next let's find all of the indicators that can be used in LRR "C" (also known as the "California Subtropical Fruit, Truck, and Specialty Crop Region")
 
 ```{r example2-LRRC}
-subset(fihs, sapply(fihs$usage_symbols, \(x) any(x == "C")), select = c("indicator", "indicator_name"))
+subset(fihs, sapply(fihs$usage_symbols, \(x) any(x == "C")),
+       select = c("indicator", "indicator_name"))
 ```
 
 Compare to LRR "D" (also known as the "Western Range and Irrigated Region")
